unpackaged/main/default/objects/ETT_Bank_Reference__c/ETT_Bank_Reference__c.object-meta.xml
<CustomObject>
    <label>Bank Reference</label>
    <nameField>
        <displayFormat>BRN-{0000}</displayFormat>
        <label>Bank Ref Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank References</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>