unpackaged/main/default/objects/ETT_Bank_Reference__c/fields/ETT_Account__c.field-meta.xml
<CustomField>
    <fullName>ETT_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ET Customer account</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bank References</relationshipLabel>
    <relationshipName>Bank_References</relationshipName>
    <type>Lookup</type>
</CustomField>