unpackaged/main/default/objects/ETT_Bank_Reference__c/fields/ETT_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>ETT_Account_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>