unpackaged/main/default/objects/ETT_Bank_Reference__c/fields/ETT_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>ETT_Account_Number__c</fullName>
    <description>ET customer Bank Account Number</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>