unpackaged/main/default/objects/ETT_Bank_Reference__c/fields/ETT_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>ETT_Bank_Name__c</fullName>
    <description>Customer Bank Name</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Bank Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>