unpackaged/main/default/objects/ETT_Bank_Reference__c/fields/ETT_IBAN__c.field-meta.xml
<CustomField>
    <fullName>ETT_IBAN__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IBAN</label>
    <length>250</length>
    <type>Text</type>
</CustomField>